Translated from "Installing Erlang" section to "Checking the installed version of Elixir" section. Finished to translating it into Japanese except for "Docker" section.

--- a/_po/ja.po
+++ b/_po/ja.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2018-07-26 15:10+0900\n"
+"PO-Revision-Date: 2018-07-27 22:30+0900\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6246,6 +6246,8 @@ msgid ""
 "command prompt) and check the Erlang version by typing `erl`. You will see som"
 "e information similar to:"
 msgstr ""
+"Erlang のインストールが終わりましたら、コマンドラインやコマンドプロンプトを開き、 `erl` コマンドでバージョンを確認しましょう。以下のような情報"
+"がいくつか表示されるはずです。"
 
 msgid ""
 "After `IO.write/2`, we can see the request sent by the `IO` module (a four-ele"
@@ -8685,6 +8687,8 @@ msgid ""
 " platform can probably get Erlang installed via one of the many package distri"
 "bution tools."
 msgstr ""
+"Windows をご利用されている開発者にはプリコンパイル済みのパッケージをおすすめします。Unix 系ディストリビューションでは、大抵それぞれに用意された"
+"ツールを用いて Erlang をインストールできます。"
 
 msgid ""
 "For `call/2` requests, we  implement a `handle_call/3` callback that receives "
@@ -9460,7 +9464,7 @@ msgid ""
 "If the tests pass, you are ready to go. Otherwise, feel free to open an issue "
 "[in the issues tracker on Github](https://github.com/elixir-lang/elixir)."
 msgstr ""
-"問題なければいいですが、もし何か気づいたことがありましたら、いつでも気軽に Issue をください！\n"
+"問題なければいいのですが、もし何か気づいたことがありましたら、いつでも気軽に Issue をください！\n"
 "[in the issues tracker on Github](https://github.com/elixir-lang/elixir)"
 
 msgid ""
@@ -10746,7 +10750,7 @@ msgstr ""
 msgid ""
 "It is highly recommended to add Elixir's bin path to your PATH environment var"
 "iable to ease development."
-msgstr ""
+msgstr "効率的な開発の為にも、Elixir コマンドのパスを環境変数 PATH に設定しておくことを強くおすすめします。"
 
 msgid ""
 "It is important that a macro is defined before its usage. Failing to define a "
@@ -11794,6 +11798,9 @@ msgid ""
 "e available in your PATH. Be sure to have Erlang binaries in your [PATH](https"
 "://en.wikipedia.org/wiki/Environment_variable), otherwise Elixir won't work!"
 msgstr ""
+"Erlang のインストールの仕方によっては、環境変数 PATH からコマンドを利用できないことがあるかも知れません。その場合は PATH を適切に設定して"
+"ください。そうでなければ、 Elixir を正常に利用できません。PATH (環境変数) という用語については [PATH](https://ja.wiki"
+"pedia.org/wiki/環境変数) を参照してください。"
 
 msgid ""
 "Notice that it defines the application callback function, `start/2`, and inste"
@@ -12005,11 +12012,16 @@ msgid ""
 "tackexchange.com/a/117470/101951), and then add to the end of this file the fo"
 "llowing line reflecting the path to your Elixir installation:"
 msgstr ""
+"**Unix 系ご利用の方** : Elixir のインストールを終えましたら、コマンドを探索する為に [ログインプロファイル](https://unix."
+"stackexchange.com/a/117470/101951)(英語) を作成し、エディタで開いたのちに以下の一行を入力して保存します。設定ファイルが"
+"すでに存在する場合は一番最後の行に書き加えてください。"
 
 msgid ""
 "On **Windows**, there are [instructions for different versions](http://www.com"
 "puterhope.com/issues/ch000549.htm) explaining the process."
 msgstr ""
+"**Windows をご利用の方** : 環境変数 PATH の設定が OS のバージョンによって異なります。 [各バージョンごとの取扱](http://w"
+"ww.computerhope.com/issues/ch000549.htm)(英語) で手順の説明をご用意していますので参考にしてください。"
 
 msgid ""
 "On the language homepage, we mention that Elixir makes documentation a first-c"
@@ -12098,7 +12110,7 @@ msgstr ""
 msgid ""
 "Once you have Elixir installed, you can check its version by running `elixir -"
 "-version`."
-msgstr ""
+msgstr "一度 Elixir のインストールを終わらせると、 `elixir --version` と入力すればバージョンを確認できます。"
 
 msgid ""
 "One consequence of this design decision is that parallelizing stateless stages"
@@ -14265,6 +14277,11 @@ msgid ""
 "[Riak documentation](https://docs.basho.com/riak/latest/ops/building/installin"
 "g/erlang/)."
 msgstr ""
+"Elixir に必要な要件は、 {{ stable.minimum_otp }} 以降の Erlang だけです。 [パッケージをプリコンパイル](http"
+"s://www.erlang-solutions.com/resources/download.html)(英語) して簡単にインストールできます。ソースフ"
+"ァイルからある特定のディレクトリにインストールしたい場合は、[Erlang 公式 Web サイト](http://www.erlang.org/downlo"
+"ad.html)(英語) をお探しいただくか、 [Riak ドキュメント (Installing Erlang)](https://docs.basho.c"
+"om/riak/latest/ops/building/installing/erlang/)(英語) がとても参考になるはずです。"
 
 msgid ""
 "The options above have different properties. Both `:rpc` and using a GenServer"
@@ -15214,7 +15231,7 @@ msgid ""
 " section below."
 msgstr ""
 "これらのディストリビューションは、たいてい自動で Erlang もインストールしてくれますが、もしインストールされない場合は [Installing Erl"
-"ang](/install.html#installing-erlang) を参照してください."
+"ang](/install.html#installing-erlang)(英語) を参照してください."
 
 msgid ""
 "Those examples are just scratching the surface of what can be achieved with ma"
