Translate the "Binaries, strings, and charlists"   Issue #48

--- a/_po/ja.po
+++ b/_po/ja.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2019-06-22 19:53+0900\n"
+"PO-Revision-Date: 2018-08-11 01:00+0900\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3018,7 +3018,7 @@ msgid "## Behaviours"
 msgstr ""
 
 msgid "## Binaries (and bitstrings)"
-msgstr ""
+msgstr "## バイナリとビット文字列"
 
 msgid "## Bitstring generators"
 msgstr ""
@@ -3042,7 +3042,7 @@ msgid "## Calendar improvements"
 msgstr ""
 
 msgid "## Charlists"
-msgstr ""
+msgstr "## 文字リスト"
 
 msgid "## Checking the installed version of Elixir"
 msgstr "## インストール済み Elixir を確認する"
@@ -3644,7 +3644,7 @@ msgid "## Types and specs"
 msgstr ""
 
 msgid "## UTF-8 and Unicode"
-msgstr ""
+msgstr "## UTF-8 と Unicode"
 
 msgid "## UTF-8 atoms, function names and variables"
 msgstr ""
@@ -4596,6 +4596,10 @@ msgid ""
 "title: Binaries, strings, and charlists\n"
 "---"
 msgstr ""
+"---\n"
+"layout: getting-started\n"
+"title: バイナリ、文字列、文字リスト\n"
+"---"
 
 msgid ""
 "---\n"
@@ -6196,6 +6200,8 @@ msgid ""
 "t use UTF-8 by default. You can change the encoding of your current session by"
 " running `chcp 65001` before entering `iex` (`iex.bat`)."
 msgstr ""
+"Note: Windows ではターミナルがデフォルトで UTF-8 が使えないことがあります。`iex` (`iex.bat`)を起動する前に`chcp "
+"65001`を実行して現在のセッションのエンコードを変更できます。"
 
 msgid ""
 "> Note: if you want to find and execute a given script in PATH so it will be l"
@@ -6375,7 +6381,7 @@ msgstr ""
 msgid ""
 "A binary is a sequence of bytes. Those bytes can be organized in any way, even"
 " in a sequence that does not make them a valid string:"
-msgstr ""
+msgstr "バイナリとはバイトのシーケンスです。これらのバイトは、どのような方法でも、文字列としては不正なシーケンスにさえ編成され得ます。"
 
 msgid ""
 "A bitstring generator can be mixed with \"regular\" enumerable generators, and s"
@@ -6385,12 +6391,12 @@ msgstr ""
 msgid ""
 "A charlist is nothing more than a list of code points. Char lists may be creat"
 "ed with single-quoted literals:"
-msgstr ""
+msgstr "文字リストとはコードポイントのリストにすぎません。文字リストはシングルクォーテーションを使ったリテラルで作成できます。"
 
 msgid ""
 "A common trick in Elixir is to concatenate the null byte `<<0>>` to a string t"
 "o see its inner binary representation:"
-msgstr ""
+msgstr "Elixir では、文字列の内部的なバイナリ表現を確かめる為に空のバイト `<<0>>`` を連結させるというテクニックをよく使います。"
 
 msgid ""
 "A common use case of `:into` can be transforming values in a map, without touc"
@@ -6406,6 +6412,11 @@ msgid ""
 " provides for working with bits and bytes, 99% of the time you will be working"
 " with binaries and using the `is_binary/1` and `byte_size/1` functions."
 msgstr ""
+"バイナリとビット文字列のコンストラクタに関する詳細な資料は[in the Elixir documentation](https://hexdocs.pm/"
+"elixir/Kernel.SpecialForms.html#%3C%3C%3E%3E/1)を参照してください。これにて文字列、バイナリ、ビット文字列のツ"
+"アーは終了します。文字列とは UTF-8 でエンコードされたバイナリであり、バイナリとはビット数が 8 で割り切ることのできるビット文字列でした。ここで E"
+"lixir がビットとバイトを用いた作業の為の柔軟性が用意されていることを示しましたが、99% はバイナリ操作と `is_binary/1` と `byte"
+"_size/1` を使うことになります。"
 
 msgid "A comprehension is made of three parts: generators, filters, and collectables."
 msgstr ""
@@ -6495,7 +6506,7 @@ msgstr ""
 msgid ""
 "A string is a UTF-8 encoded binary. In order to understand exactly what we mea"
 "n by that, we need to understand the difference between bytes and code points."
-msgstr ""
+msgstr "文字列は UTF-8 でエンコードされたバイナリです。この意味を理解する為には、バイトとコードポイントの違いを知る必要があります。"
 
 msgid ""
 "A timeout of 0 can be given when you already expect the message to be in the m"
@@ -7894,6 +7905,8 @@ msgid ""
 "go up to 255. Binaries allow modifiers to be given to store numbers bigger tha"
 "n 255 or to convert a code point to its UTF-8 representation:"
 msgstr ""
+"バイナリに与えたれている各数字はバイトを表す為であり、255 以下でなければいけません。バイナリは 255 より大きな数字を保持したり、コードポイントを U"
+"TF-8 に変換する為に修飾子を受け付けることができます。"
 
 msgid "Eager to learn more? Keep reading!"
 msgstr "もっと知りたいですか？こちらをご覧ください！"
@@ -9736,6 +9749,8 @@ msgid ""
 "ave used the `is_binary/1` function, Elixir must have an underlying type empow"
 "ering strings. And it does! Let's talk about binaries."
 msgstr ""
+"しかし、文字列型はこの話におけるほんの一部分にでしかありません。文字列がバイナリであり、`is_binary/1`関数を使った時、Elixir には文字列を"
+"強化する為に基礎的な型が必要です。というわけで、それをやるとしましょう。今こそバイナリについてお話する時です！"
 
 msgid ""
 "However, the snippet above will spawn and run concurrently as many tasks as th"
@@ -9857,7 +9872,7 @@ msgid ""
 msgstr ""
 
 msgid "If a byte has 8 bits, what happens if we pass a size of 1 bit?"
-msgstr ""
+msgstr "1byte(8bit) に 1bit を渡すとどうなるでしょうか。"
 
 msgid ""
 "If a function with default values has multiple clauses, it is required to crea"
@@ -10201,7 +10216,7 @@ msgstr ""
 msgid ""
 "In \"Basic types\", we learned about strings and used the `is_binary/1` function"
 " for checks:"
-msgstr ""
+msgstr "基本型の章で、我々は文字列について学び、`is_binary/1` 関数を使いました。"
 
 msgid ""
 "In Elixir v0.13, `mix deps.get` only fetches dependencies and it does so accro"
@@ -10310,7 +10325,7 @@ msgid ""
 msgstr ""
 
 msgid "In Elixir, you can define a binary using `<<>>`:"
-msgstr ""
+msgstr "Elixir では `<<>>` を使ってバイナリを定義できます。"
 
 msgid ""
 "In Elixir, your code runs in many processes that talk to each other and the El"
@@ -10619,7 +10634,7 @@ msgid ""
 "ular old libraries that do not accept binaries as arguments. You can convert a"
 " charlist to a string and back by using the `to_string/1` and `to_charlist/1` "
 "functions:"
-msgstr ""
+msgstr "文字リストは、主に Erlang インターフェイスの利用における、特にバイナリを引数として受け付けられないライブラリで使われます。"
 
 msgid ""
 "In practice, however, Elixir developers rarely use the `try/rescue` construct."
@@ -11061,6 +11076,8 @@ msgid ""
 "In this chapter, we will understand what binaries are, how they associate with"
 " strings, and what a single-quoted value, `'like this'`, means in Elixir."
 msgstr ""
+"Elixir におけるバイナリがどのように文字列と関連するのか、`'こういった単一引用符'` がどういう意味を持っているのか。この章では、バイナリについてそ"
+"れが何であるかを理解していきましょう。"
 
 msgid ""
 "In this directory live all assets for `ElixirLangGuide`. The ready to\n"
@@ -12153,6 +12170,8 @@ msgid ""
 "we want to match on a binary of unknown size, it is possible by using the bina"
 "ry modifier at the end of the pattern:"
 msgstr ""
+"バイナリパターンの各エントリはちょうど 8bit にマッチすることを期待されています。サイズが分からないバイナリでマッチさせたい時には、パターンマッチの最後"
+"にバイナリ修飾子を置くことによって可能です。"
 
 msgid ""
 "Note not all tasks have been updated to use strict option parsing. Some tasks,"
@@ -12260,7 +12279,7 @@ msgstr ""
 msgid ""
 "Note that those functions are polymorphic. They not only convert charlists to "
 "strings, but also integers to strings, atoms to strings, and so on."
-msgstr ""
+msgstr "これらの関数は多態的に機能します。文字リストを文字列に変換するだけでなく、整数を文字列に変換したり、アトムを文字列に変換することもできます。"
 
 msgid "Note that values added to the front are the ones fetched on lookup:"
 msgstr ""
@@ -13375,7 +13394,7 @@ msgid ""
 msgstr ""
 
 msgid "Similar results can be achieved with the string concatenation operator `<>`:"
-msgstr ""
+msgstr "文字列の連結演算子を使って、類似する結果をアーカイブできます。"
 
 msgid ""
 "Similar to `IEx.pry/0`, once a breakpoint is reached code execution stops unti"
@@ -13533,6 +13552,8 @@ msgid ""
 "en we calculate the `byte_size/1` of a string compared to its `String.length/1"
 "`:"
 msgstr ""
+"コードポイント `322` が割り振られている `ł` のような文字があるので、実際にはそれを表現する為に 1 バイト以上が必要になります。`String."
+"length/1`と`byte_size/1`で比較し、違いを見てみます。"
 
 msgid ""
 "Since we have now changed our registry to use `KV.BucketSupervisor`, which is "
@@ -13716,7 +13737,7 @@ msgstr ""
 msgid ""
 "String (binary) concatenation uses the `<>` operator but charlists use the lis"
 "ts concatenation operator `++`:"
-msgstr ""
+msgstr "文字列 (バイナリ) 連結では `<>` を使いますが、文字リストにはリスト連結の `++` を使います。"
 
 msgid "String concatenation is done with `<>`:"
 msgstr "文字列の連結には `<>` が使われます。"
@@ -13996,6 +14017,11 @@ msgid ""
 "` to `255`. But of course, given you can actually read `\"hełło\"` on your scree"
 "n, it must be represented *somehow*. That's where encodings come in."
 msgstr ""
+"Unicode は私たちが使う多くの文字にコードポイントを割り振っています。例えば、`a`という文字は`97`のコードポイントを持っていますが、`ł`という"
+"文字は`322`のコードポイントを持っています。ディスクに`\"hełło\"`という文字列を書き込む際に、私たちはこれら文字の連なりをバイトに変換しなければな"
+"らないのですが、1バイトが一つのコードポイントを表現するというルールに習った場合、`\"hełło\"`を表現することができません。コードポイント`322`は`"
+"ł`の為に使用していますが、1バイトでは`0`から`255`の数値を表現することしかできないのです。とはいえ、実際には`\"hełło\"`をスクリーン上で読め"
+"るのですから、 *何らかの方法* でそれを表現する必要があります。そこでエンコーディングの出番です。"
 
 msgid ""
 "The [String module](https://hexdocs.pm/elixir/String.html) contains a bunch of"
@@ -15236,7 +15262,7 @@ msgstr ""
 msgid ""
 "The string concatenation operation is actually a binary concatenation operator"
 ":"
-msgstr ""
+msgstr "文字列の連結操作は、実際にはバイナリの連結操作です。"
 
 msgid ""
 "The supervision strategy dictates what happens when one of the children crashe"
@@ -15324,7 +15350,7 @@ msgstr ""
 msgid ""
 "The value is no longer a binary, but a bitstring -- a bunch of bits! So a bina"
 "ry is a bitstring where the number of bits is divisible by 8."
-msgstr ""
+msgstr "値はもはやバイナリではありませんが、ビット文字列、つまりビットの塊です。よって、バイナリはビット数が 8 で割り切ることのできるビット文字列です。"
 
 msgid ""
 "The variable `_` is special in that it can never be read from. Trying to read "
@@ -15487,7 +15513,7 @@ msgstr ""
 msgid ""
 "There, `byte_size/1` counts the underlying raw bytes, and `String.length/1` co"
 "unts characters."
-msgstr ""
+msgstr "ほら。`byte_size/1`は根本的にバイト数を計算しますが、`String.length/1`は文字数を計算していますね。"
 
 msgid ""
 "Therefore, if you don't want to handle the error outcomes, prefer using `File."
@@ -16273,6 +16299,8 @@ msgid ""
 " bytes to represent `ł`. In Elixir, you can get a character's code point by us"
 "ing `?`:"
 msgstr ""
+"UTF-8 は`h`、`e`、`o`を表現する為にそれぞれ 1 バイトを必要としますが、`ł`の表現には 2 バイトです。Elixir では `?` を使っ"
+"て文字のコードポイントを得られます。"
 
 msgid ""
 "Umbrella applications can also be used as a stepping stone for eventually extr"
@@ -16565,7 +16593,7 @@ msgid "We can also get the number of bytes in a string:"
 msgstr "文字列のバイト数も得られます。"
 
 msgid "We can also pattern match on binaries / bitstrings:"
-msgstr ""
+msgstr "バイナリやビット文字列でもパターンマッチができます。"
 
 msgid ""
 "We can also provide our own sigils by implementing functions that follow the `"
@@ -17266,6 +17294,9 @@ msgid ""
 "ng is a UTF-8 encoded binary, we mean a string is a bunch of bytes organized i"
 "n a way to represent certain code points, as specified by the UTF-8 encoding."
 msgstr ""
+"バイトでコードポイントを表現する際にそれらをどうにかエンコードする必要があります。Elixir はデフォルトのエンコード方式として UTF-8 を採用してい"
+"ます。文字列は UTF-8 でエンコードされたバイナリだと述べました。あの意味は、文字列が UTF-8 で指定された通りのコードポイントを表す為に編成される"
+"バイトの一塊りだという意味です。"
 
 msgid "When running this property, the failure might trigger for a list like this:"
 msgstr ""
@@ -17528,7 +17559,7 @@ msgstr ""
 msgid ""
 "With binaries, strings, and charlists out of the way, it is time to talk about"
 " key-value data structures."
-msgstr ""
+msgstr "バイナリ、文字列、文字リストについてはこのくらいにして、続いてはキーと値のデータ構造についてお話ししましょう。"
 
 msgid ""
 "With doctests at hand, it is your turn to make tests pass! Once you're ready, "
@@ -17777,6 +17808,8 @@ msgid ""
 "xir/String.html) to split a string in its individual characters, each one as a"
 " string of length 1:"
 msgstr ""
+"[the `String` module](https://hexdocs.pm/elixir/String.html)の関数を使ってそれぞれを一文字の長さ"
+"に分割できます。"
 
 msgid ""
 "You can download and compile Elixir in few steps. The first one is to [install"
@@ -17918,6 +17951,9 @@ msgid ""
 "hile double-quotes represent a string (i.e. a binary), single-quotes represent"
 " a charlist (i.e. a list)."
 msgstr ""
+"文字リストはバイトの代わりに文字のコードポイントを包含していることが分かりますね (IEx は、いずれかの整数が ASCII の範囲を超える場合のみ、デフォ"
+"ルトでコードポイントを出力します)。ダブルクォーテーションが文字列(i.e. バイナリ) を表現するのに対して、シングルクォーテーションは文字リストを表現し"
+"ます(i.e. リスト)。"
 
 msgid "You can see the new accessors in the `Access` module."
 msgstr ""
@@ -17996,6 +18032,9 @@ msgid ""
 "ts showcased in the article [\"The string type is broken\"](http://mortoray.com/"
 "2013/11/27/the-string-type-is-broken/)."
 msgstr ""
+"Elixir が優れた文字列操作をサポートしていることをお分かりいただけると思います。また同時に多くの Unicode 操作もサポートしています。実際、[\""
+"文字列型は壊れている(英語)\"](http://mortoray.com/2013/11/27/the-string-type-is-broken/)という"
+"記事で提示されているすべてのテストを Elixir はパスしています。"
 
 msgid ""
 "You'll notice the slightly uncommon terminology of \"outer function\" and\n"
