--- a/_po/ja/getting-started/binaries-strings-and-char-lists.po
+++ b/_po/ja/getting-started/binaries-strings-and-char-lists.po
@@ -14,6 +14,10 @@ msgid ""
 "title: Binaries, strings, and charlists\n"
 "---"
 msgstr ""
+"---\n"
+"layout: getting-started\n"
+"title: バイナリ、文字列、文字リスト\n"
+"---"
 
 msgid "# {{ page.title }}"
 msgstr ""
@@ -24,7 +28,7 @@ msgstr ""
 msgid ""
 "In \"Basic types\", we learned about strings and used the `is_binary/1` function"
 " for checks:"
-msgstr ""
+msgstr "基本型の章で、我々は文字列について学び、`is_binary/1` 関数を使いました。"
 
 msgid ""
 "```iex\n"
@@ -39,14 +43,16 @@ msgid ""
 "In this chapter, we will understand what binaries are, how they associate with"
 " strings, and what a single-quoted value, `'like this'`, means in Elixir."
 msgstr ""
+"Elixir におけるバイナリがどのように文字列と関連するのか、`'こういった単一引用符'` がどういう意味を持っているのか。この章では、バイナリについてそ"
+"れが何であるかを理解していきましょう。"
 
 msgid "## UTF-8 and Unicode"
-msgstr ""
+msgstr "## UTF-8 と Unicode"
 
 msgid ""
 "A string is a UTF-8 encoded binary. In order to understand exactly what we mea"
 "n by that, we need to understand the difference between bytes and code points."
-msgstr ""
+msgstr "文字列は UTF-8 でエンコードされたバイナリです。この意味を理解する為には、バイトとコードポイントの違いを知る必要があります。"
 
 msgid ""
 "The Unicode standard assigns code points to many of the characters we know. Fo"
@@ -58,6 +64,11 @@ msgid ""
 "` to `255`. But of course, given you can actually read `\"hełło\"` on your scree"
 "n, it must be represented *somehow*. That's where encodings come in."
 msgstr ""
+"Unicode は私たちが使う多くの文字にコードポイントを割り振っています。例えば、`a`という文字は`97`のコードポイントを持っていますが、`ł`という"
+"文字は`322`のコードポイントを持っています。ディスクに`\"hełło\"`という文字列を書き込む際に、私たちはこれら文字の連なりをバイトに変換しなければな"
+"らないのですが、1バイトが一つのコードポイントを表現するというルールに習った場合、`\"hełło\"`を表現することができません。コードポイント`322`は`"
+"ł`の為に使用していますが、1バイトでは`0`から`255`の数値を表現することしかできないのです。とはいえ、実際には`\"hełło\"`をスクリーン上で読め"
+"るのですから、 *何らかの方法* でそれを表現する必要があります。そこでエンコーディングの出番です。"
 
 msgid ""
 "When representing code points in bytes, we need to encode them somehow. Elixir"
@@ -65,6 +76,9 @@ msgid ""
 "ng is a UTF-8 encoded binary, we mean a string is a bunch of bytes organized i"
 "n a way to represent certain code points, as specified by the UTF-8 encoding."
 msgstr ""
+"バイトでコードポイントを表現する際にそれらをどうにかエンコードする必要があります。Elixir はデフォルトのエンコード方式として UTF-8 を採用してい"
+"ます。文字列は UTF-8 でエンコードされたバイナリだと述べました。あの意味は、文字列が UTF-8 で指定された通りのコードポイントを表す為に編成される"
+"バイトの一塊りだという意味です。"
 
 msgid ""
 "Since we have characters like `ł` assigned to the code point `322`, we actuall"
@@ -72,6 +86,8 @@ msgid ""
 "en we calculate the `byte_size/1` of a string compared to its `String.length/1"
 "`:"
 msgstr ""
+"コードポイント `322` が割り振られている `ł` のような文字があるので、実際にはそれを表現する為に 1 バイト以上が必要になります。`String."
+"length/1`と`byte_size/1`で比較し、違いを見てみます。"
 
 msgid ""
 "```iex\n"
@@ -87,19 +103,23 @@ msgstr ""
 msgid ""
 "There, `byte_size/1` counts the underlying raw bytes, and `String.length/1` co"
 "unts characters."
-msgstr ""
+msgstr "ほら。`byte_size/1`は根本的にバイト数を計算しますが、`String.length/1`は文字数を計算していますね。"
 
 msgid ""
 "> Note: if you are running on Windows, there is a chance your terminal does no"
 "t use UTF-8 by default. You can change the encoding of your current session by"
 " running `chcp 65001` before entering `iex` (`iex.bat`)."
 msgstr ""
+"Note: Windows ではターミナルがデフォルトで UTF-8 が使えないことがあります。`iex` (`iex.bat`)を起動する前に`chcp "
+"65001`を実行して現在のセッションのエンコードを変更できます。"
 
 msgid ""
 "UTF-8 requires one byte to represent the characters `h`, `e`, and `o`, but two"
 " bytes to represent `ł`. In Elixir, you can get a character's code point by us"
 "ing `?`:"
 msgstr ""
+"UTF-8 は`h`、`e`、`o`を表現する為にそれぞれ 1 バイトを必要としますが、`ł`の表現には 2 バイトです。Elixir では `?` を使っ"
+"て文字のコードポイントを得られます。"
 
 msgid ""
 "```iex\n"
@@ -115,6 +135,8 @@ msgid ""
 "xir/String.html) to split a string in its individual characters, each one as a"
 " string of length 1:"
 msgstr ""
+"[the `String` module](https://hexdocs.pm/elixir/String.html)の関数を使ってそれぞれを一文字の長さ"
+"に分割できます。"
 
 msgid ""
 "```iex\n"
@@ -129,18 +151,23 @@ msgid ""
 "ts showcased in the article [\"The string type is broken\"](http://mortoray.com/"
 "2013/11/27/the-string-type-is-broken/)."
 msgstr ""
+"Elixir が優れた文字列操作をサポートしていることをお分かりいただけると思います。また同時に多くの Unicode 操作もサポートしています。実際、[\""
+"文字列型は壊れている(英語)\"](http://mortoray.com/2013/11/27/the-string-type-is-broken/)という"
+"記事で提示されているすべてのテストを Elixir はパスしています。"
 
 msgid ""
 "However, strings are just part of the story. If a string is a binary, and we h"
 "ave used the `is_binary/1` function, Elixir must have an underlying type empow"
 "ering strings. And it does! Let's talk about binaries."
 msgstr ""
+"しかし、文字列型はこの話におけるほんの一部分にでしかありません。文字列がバイナリであり、`is_binary/1`関数を使った時、Elixir には文字列を"
+"強化する為に基礎的な型が必要です。というわけで、それをやるとしましょう。今こそバイナリについてお話する時です！"
 
 msgid "## Binaries (and bitstrings)"
-msgstr ""
+msgstr "## バイナリとビット文字列"
 
 msgid "In Elixir, you can define a binary using `<<>>`:"
-msgstr ""
+msgstr "Elixir では `<<>>` を使ってバイナリを定義できます。"
 
 msgid ""
 "```iex\n"
@@ -154,7 +181,7 @@ msgstr ""
 msgid ""
 "A binary is a sequence of bytes. Those bytes can be organized in any way, even"
 " in a sequence that does not make them a valid string:"
-msgstr ""
+msgstr "バイナリとはバイトのシーケンスです。これらのバイトは、どのような方法でも、文字列としては不正なシーケンスにさえ編成され得ます。"
 
 msgid ""
 "```iex\n"
@@ -166,7 +193,7 @@ msgstr ""
 msgid ""
 "The string concatenation operation is actually a binary concatenation operator"
 ":"
-msgstr ""
+msgstr "文字列の連結操作は、実際にはバイナリの連結操作です。"
 
 msgid ""
 "```iex\n"
@@ -178,7 +205,7 @@ msgstr ""
 msgid ""
 "A common trick in Elixir is to concatenate the null byte `<<0>>` to a string t"
 "o see its inner binary representation:"
-msgstr ""
+msgstr "Elixir では、文字列の内部的なバイナリ表現を確かめる為に空のバイト `<<0>>`` を連結させるというテクニックをよく使います。"
 
 msgid ""
 "```iex\n"
@@ -192,6 +219,8 @@ msgid ""
 "go up to 255. Binaries allow modifiers to be given to store numbers bigger tha"
 "n 255 or to convert a code point to its UTF-8 representation:"
 msgstr ""
+"バイナリに与えたれている各数字はバイトを表す為であり、255 以下でなければいけません。バイナリは 255 より大きな数字を保持したり、コードポイントを U"
+"TF-8 に変換する為に修飾子を受け付けることができます。"
 
 msgid ""
 "```iex\n"
@@ -209,7 +238,7 @@ msgid ""
 msgstr ""
 
 msgid "If a byte has 8 bits, what happens if we pass a size of 1 bit?"
-msgstr ""
+msgstr "1byte(8bit) に 1bit を渡すとどうなるでしょうか。"
 
 msgid ""
 "```iex\n"
@@ -229,7 +258,7 @@ msgstr ""
 msgid ""
 "The value is no longer a binary, but a bitstring -- a bunch of bits! So a bina"
 "ry is a bitstring where the number of bits is divisible by 8."
-msgstr ""
+msgstr "値はもはやバイナリではありませんが、ビット文字列、つまりビットの塊です。よって、バイナリはビット数が 8 で割り切ることのできるビット文字列です。"
 
 msgid ""
 "```iex\n"
@@ -241,7 +270,7 @@ msgid ""
 msgstr ""
 
 msgid "We can also pattern match on binaries / bitstrings:"
-msgstr ""
+msgstr "バイナリやビット文字列でもパターンマッチができます。"
 
 msgid ""
 "```iex\n"
@@ -259,6 +288,8 @@ msgid ""
 "we want to match on a binary of unknown size, it is possible by using the bina"
 "ry modifier at the end of the pattern:"
 msgstr ""
+"バイナリパターンの各エントリはちょうど 8bit にマッチすることを期待されています。サイズが分からないバイナリでマッチさせたい時には、パターンマッチの最後"
+"にバイナリ修飾子を置くことによって可能です。"
 
 msgid ""
 "```iex\n"
@@ -270,7 +301,7 @@ msgid ""
 msgstr ""
 
 msgid "Similar results can be achieved with the string concatenation operator `<>`:"
-msgstr ""
+msgstr "文字列の連結演算子を使って、類似する結果をアーカイブできます。"
 
 msgid ""
 "```iex\n"
@@ -290,14 +321,19 @@ msgid ""
 " provides for working with bits and bytes, 99% of the time you will be working"
 " with binaries and using the `is_binary/1` and `byte_size/1` functions."
 msgstr ""
+"バイナリとビット文字列のコンストラクタに関する詳細な資料は[in the Elixir documentation](https://hexdocs.pm/"
+"elixir/Kernel.SpecialForms.html#%3C%3C%3E%3E/1)を参照してください。これにて文字列、バイナリ、ビット文字列のツ"
+"アーは終了します。文字列とは UTF-8 でエンコードされたバイナリであり、バイナリとはビット数が 8 で割り切ることのできるビット文字列でした。ここで E"
+"lixir がビットとバイトを用いた作業の為の柔軟性が用意されていることを示しましたが、99% はバイナリ操作と `is_binary/1` と `byte"
+"_size/1` を使うことになります。"
 
 msgid "## Charlists"
-msgstr ""
+msgstr "## 文字リスト"
 
 msgid ""
 "A charlist is nothing more than a list of code points. Char lists may be creat"
 "ed with single-quoted literals:"
-msgstr ""
+msgstr "文字リストとはコードポイントのリストにすぎません。文字リストはシングルクォーテーションを使ったリテラルで作成できます。"
 
 msgid ""
 "```iex\n"
@@ -319,13 +355,16 @@ msgid ""
 "hile double-quotes represent a string (i.e. a binary), single-quotes represent"
 " a charlist (i.e. a list)."
 msgstr ""
+"文字リストはバイトの代わりに文字のコードポイントを包含していることが分かりますね (IEx は、いずれかの整数が ASCII の範囲を超える場合のみ、デフォ"
+"ルトでコードポイントを出力します)。ダブルクォーテーションが文字列(i.e. バイナリ) を表現するのに対して、シングルクォーテーションは文字リストを表現し"
+"ます(i.e. リスト)。"
 
 msgid ""
 "In practice, charlists are used mostly when interfacing with Erlang, in partic"
 "ular old libraries that do not accept binaries as arguments. You can convert a"
 " charlist to a string and back by using the `to_string/1` and `to_charlist/1` "
 "functions:"
-msgstr ""
+msgstr "文字リストは、主に Erlang インターフェイスの利用における、特にバイナリを引数として受け付けられないライブラリで使われます。"
 
 msgid ""
 "```iex\n"
@@ -343,12 +382,12 @@ msgstr ""
 msgid ""
 "Note that those functions are polymorphic. They not only convert charlists to "
 "strings, but also integers to strings, atoms to strings, and so on."
-msgstr ""
+msgstr "これらの関数は多態的に機能します。文字リストを文字列に変換するだけでなく、整数を文字列に変換したり、アトムを文字列に変換することもできます。"
 
 msgid ""
 "String (binary) concatenation uses the `<>` operator but charlists use the lis"
 "ts concatenation operator `++`:"
-msgstr ""
+msgstr "文字列 (バイナリ) 連結では `<>` を使いますが、文字リストにはリスト連結の `++` を使います。"
 
 msgid ""
 "```iex\n"
@@ -371,4 +410,4 @@ msgstr ""
 msgid ""
 "With binaries, strings, and charlists out of the way, it is time to talk about"
 " key-value data structures."
-msgstr ""
+msgstr "バイナリ、文字列、文字リストについてはこのくらいにして、続いてはキーと値のデータ構造についてお話ししましょう。"
